# critic2

./: .dir-locals.el  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.old  INSTALL  Makefile.am  README  README.md  THANKS  VERSION  configure.ac  prepare_for_packing.sh
dat/: CMakeLists.txt  Makefile.am  al_pbe.wfc  as_pbe.wfc  at_pbe.wfc  bi_pbe.wfc  br_pbe.wfc  ca_pbe.wfc  cd_pbe.wfc  ce_pbe.wfc  cif_core.dic  cl_pbe.wfc  co_pbe.wfc  cr_pbe.wfc  cs_pbe.wfc  dy_pbe.wfc  er_pbe.wfc  fr_pbe.wfc  ga_pbe.wfc  gd_pbe.wfc  ge_pbe.wfc  he_pbe.wfc  hg_pbe.wfc  ho_pbe.wfc  i__pbe.wfc  in_pbe.wfc  la_pbe.wfc  li_pbe.wfc  mo_pbe.wfc  n__pbe.wfc  nd_pbe.wfc  ne_pbe.wfc  ni_pbe.wfc  os_pbe.wfc  pa_pbe.wfc  pb_pbe.wfc  po_pbe.wfc  pr_pbe.wfc  pt_pbe.wfc  pu_pbe.wfc  (+13 more)
dat/cif/: Makefile.am
dat/fonts/: Makefile.am
dat/helpdoc/: 00_main.md  01_inputoutput.md  02_arithmetics.md  03_crystal.md  04_molecule.md  05_write.md  06_fields.md  07_graphics.md  08_cpsearch.md  09_gradientpath.md  10_basinplot.md  11_integrate.md  12_nciplot.md  13_structure.md  14_stm.md  15_misc.md  addopts.keyw  amd.keyw  atomlabel.keyw  auto.keyw  bader.keyw  basinplot.keyw  benchmark.keyw  bondfactor.keyw  bundleplot.keyw  clear.keyw  compare.keyw  comparevc.keyw  coord.keyw  count.keyw  cpreport.keyw  crystal.keyw  cube.keyw  download_md.sh  echo.keyw  econ.keyw  environ.keyw  ewald.keyw  fluxprint.keyw  grdvec.keyw  (+59 more)
dat/lib/: Makefile.am
dat/shaders/: Makefile.am  cylinder.fs  cylinder.vs  mesh.fs  mesh.vs  phong.fs  phong.vs  pickindex.fs  simple.fs  simple.vs  sphere.fs  sphere.vs  test.fs  test.vs  text.fs  text.vs  text_onscene.fs  text_onscene.vs
dat/wfc/: Makefile.am  ac_pbe.wfc  ag_pbe.wfc  al_pbe.wfc  am_pbe.wfc  ar_pbe.wfc  as_pbe.wfc  at_pbe.wfc  au_pbe.wfc  b__pbe.wfc  ba_pbe.wfc  be_pbe.wfc  bh_pbe.wfc  bi_pbe.wfc  bk_pbe.wfc  br_pbe.wfc  c__pbe.wfc  ca_pbe.wfc  cd_pbe.wfc  ce_pbe.wfc  cf_pbe.wfc  cl_pbe.wfc  cm_pbe.wfc  cn_pbe.wfc  co_pbe.wfc  cr_pbe.wfc  cs_pbe.wfc  cu_pbe.wfc  db_pbe.wfc  ds_pbe.wfc  dy_pbe.wfc  er_pbe.wfc  es_pbe.wfc  eu_pbe.wfc  f__pbe.wfc  fe_pbe.wfc  fl_pbe.wfc  fm_pbe.wfc  fr_pbe.wfc  ga_pbe.wfc  (+79 more)
src/: #crystalmod@edit.f90#  .#critic2.f90.1.11  .#crystalmod@proc.f90  .#fields.F90.1.2  .#grid3mod@proc.f90  CMakeLists.txt  Makefile.am  abinit_private.f90  abinit_private@proc.f90  arithmetic.F90  arithmetic@proc.F90  autocp.f90  autocp@proc.f90  bader.f90  bader@proc.f90  bisect.f90  bisect@proc.f90  c_interface_module.f90  cfftnd.f90  config.F90.in  config.f90  config@proc.F90  config@proc.F90.in  critic2.F90  critic2.manifest  crystalmod.F90  crystalmod.f90  crystalmod@complex.f90  crystalmod@edit.f90  crystalmod@env.f90  crystalmod@guesspg.f90  crystalmod@guessspg.f90  crystalmod@mols.f90  crystalmod@molsym.f90  crystalmod@powderproc.F90  crystalmod@powderproc.f90  crystalmod@proc.f90  crystalmod@symmetry.f90  crystalmod@vibrations.F90  crystalmod@vibrations.f90  (+128 more)
src-gui/: #main.cpp#  .#main.cpp  CMakeLists.txt  Makefile.am  callback.cpp  callback.h  camera.cpp  camera.h  critic2.h  cylinder.i  cylinder.v  dialog.cpp  dialog.h  draw.cpp  draw.h  geometry.cpp  geometry.h  gl3w.c  global.h  guiapps.cpp  guiapps.h  imgui.cpp  imgui.ini  imgui_impl_glfw_gl3.cpp  imgui_impl_glut.cpp  imgui_notes.org  keybinding.cpp  keybinding.h  main.cpp  main.h  matrix_math.cpp  matrix_math.h  menu.cpp  menu.h  message.cpp  message.h  scene.cpp  scene.h  settings.cpp  settings.h  (+12 more)
src-gui/attic/: bits_and_pieces.cpp  draw.cpp  draw.h  geometry.cpp  guiapps.cpp  imgui_dock.cpp  imgui_dock.h  imguifilesystem.cpp  matrix_math.cpp  menu.cpp  notes  settings.cpp  settings.h  shader.cpp
src-gui/attic_new/: axes.cpp  keybinding_callbacks.cpp  rotation_ball.cpp
src-gui/attic_old/: guiapps.h  main.cpp  menu.h
src-gui/imgui/: Makefile.am  additional_fonts.h  font_glyphs.h  fontawesome.h  fontawesome_glyphs.h  fonts_additional.inl  icon_glyphs.h  imgui.cpp  imgui_dock.cpp  imgui_dock.h  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  imgui_widgets.cpp  imgui_widgets.h  mouse.h
src-gui/resources/: FontAwesome.sfd  small-icons.sfd
src/ciftbx/: CMakeLists.txt  Makefile.am  NOTICE  ciftbx.cmf  ciftbx.cmn  ciftbx.cmv  ciftbx.f  ciftbx.sys  clearfp.f  hash_funcs.f
src/cubpack/: .#Makefile.in.1.7  CMakeLists.txt  Makefile.am  buckley.f90  check.f90  cui.f90  divide.f90  ds_routines.f90  error_handling.f90  global_all.f90  internal_types.f90  region_processor.f90  rule_1.f90  rule_c2.f90  rule_c3.f90  rule_cn.f90  rule_general.f90  rule_t2.f90  rule_t3.f90  rule_tn.f90  volume.f90
src/emd/: CMakeLists.txt  Makefile.am  emd.c  emd.h
src/gui/: .#windows@geometry.f90  CMakeLists.txt  cimgui.cpp  commands.f90  commands@proc.f90  gui_interfaces.f90  gui_interfaces_cimgui.f90  gui_interfaces_glfw.f90  gui_interfaces_opengl3.f90  gui_interfaces_threads.f90  gui_keybindings.f90  gui_keybindings@proc.f90  gui_main.f90  gui_main@proc.F90  gui_main@proc.f90  gui_templates.f90  gui_templates@proc.f90  gui_utils.f90  gui_utils@proc.f90  gui_window.f90  gui_window@proc.f90  icons.f90  icons@proc.f90  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  interfaces_cimgui.f90  interfaces_glfw.f90  interfaces_opengl3.f90  interfaces_stb.f90  interfaces_threads.f90  keybindings.f90  keybindings@proc.f90  launcher.c  representations.f90  representations@proc.f90  scenemod.f90  scenemod@proc.f90  scenes.f90  scenes@proc.f90  shaders.f90  (+34 more)
src/json-fortran/: CMakeLists.txt  Makefile.am
src/oldlibs/: CMakeLists.txt  Makefile.am  blas.f  dasum.f  daxpy.f  ddot.f  dgeco.f  dgedi.f  dgeev.f  dgefa.f  dp1vlu.f  dpcoef.f  dpolft.f  dscal.f  dswap.f  eispack.f  idamax.f  lubksb.f  ludcmp.f  tqlgrm.f  trace.f  tredig.f
src/qhull/: CMakeLists.txt  Makefile.am  io.c  libqhull.h  qhull_a.h  user.h
src/spglib/: CMakeLists.txt  Makefile.am  arithmetic.c  arithmetic.h  cell.c  cell.h  debug.c  debug.h  delaunay.c  delaunay.h  determination.c  determination.h  hall_symbol.c  hall_symbol.h  kgrid.c  kgrid.h  kpoint.c  kpoint.h  magnetic_spacegroup.c  (+30 more)
tests/: CMakeLists.txt  Makefile.am  zz_source.tar.xz
(+1194 files in other folders)
